<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/toDoBackgrounToDoApp"
    android:orientation="vertical"
    android:padding="16dp">


    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/hintText"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBussines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/toDoBusinessCategory"
            android:checked="true"
            android:text="@string/textBussines"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/toDoPersonalCategory"
            android:text="@string/textPersonal"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/toDoOtherCategory"
            android:text="@string/textOther"
            android:textColor="@color/white" />
    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/toDoAccent"
        android:text="@string/createTask" />
</LinearLayout>


